# queue-up-for-claude

./: .env.example  .gitignore  LICENSE  README.md  codex-queue  pyproject.toml
.agent/: .gitignore  AGENT.md  BEHAVIOR.md  CONTEXT.md
.agent/briefings/: 2026-05-01.md
.agent/memory/: procedural.md  semantic.md
config/: profiles.yaml
docs/: agent-context.md  auth-and-remote-access.md  cli.md  runner-state-machine.md  security.md  usage-checking.md  web-dashboard.md
queue/done/: llmsandbox-20260502-0922.yaml
scripts/: check_usage.py
src/queue_worker/: __init__.py  auth.py  cli.py  config.py  executor.py  file_browser.py  injector.py  lock.py  logger.py  profiles.py  queue_ops.py  runner.py  sessions.py  task.py  usage_check.py  usage_check_codex_http.py  usage_check_command.py  usage_check_http.py  web.py
src/queue_worker/static/: index.html  login.html
tests/: test_codex_context.py  test_dotenv_isolation.py  test_executor_codex.py  test_file_api.py  test_file_browser.py  test_parse_usage_text.py  test_reset_ping.py  test_run_policy.py  test_sessions_codex.py  test_usage_check_command.py  test_usage_check_http.py  test_usage_history.py
